@@ -24,6 +24,8 @@ to polish RDoc for Ruby 1.9.1.
     depending on the order in which RDoc processed the files.  This should
     ensure that the child class -> parent class relationship is correct in
     ri documentation, allowing ri to lookup inherited methods (i.e., File#read).
+  * Stop ri from crashing when it looks for a completely bogus method (i.e.,
+    File#reada).  Now, ri exits with a helpful error message.
 
 === 2.2.0 / 2008-09-19
 This version includes some significant enhancements to ri.  See RI.txt for
